--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
-<head><title>Solve Calc the game</title></head>
+<head>
+  <title>Solve Calc the game</title>
+</head>
 <body>
-<h1>Solve calc the Game</h1>
+  <h1>Solve calc the Game</h1>
+  <input type="text" id="desired"></input>
+  <input type="text" id="given"></input>
+  <input type="text" id="try"></input>
+  <input type="text" id="operands"></input>
+  <input type="button" id="calc" onClick="calculate()">Calculate</input>
+  <script src="./index.js"></script>
 <body>
 </html>
