--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <input type="text" id="given"></input>
   <input type="text" id="try"></input>
   <input type="text" id="operands"></input>
-  <input type="button" id="calc" onClick="calculate()">Calculate</input>
+  <input type="button" id="calc" value='Calculate' onClick="calculate()"></input>
   <script src="./index.js"></script>
 <body>
 </html>
