--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <input type="button" value='/' onClick="addToInput('/')"></input>
         <input type="button" value='=>' onClick="addToInput('=>')"></input>
         <input type="button" value='<<' onClick="addToInput('<<')"></input>
+        <input type="button" value='^' onClick="addToInput('^')"></input>
         <input type="button" value=';' onClick="addToInput(';')"></input>
       </div>
       <div class="numbers">
