--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   <h1 class="headline">Solve Calc the Game</h1>
   <div class="inputs">
     <div class="input-wrapper">
-      <label class="label" for="desired">Desired:</label>
+      <label class="label" for="desired">Ziel:</label>
       <input class="input" type="text" id="desired"></input>
     </div>
     <div class="input-wrapper">
-      <label class="label" for="try">Tries:</label>
+      <label class="label" for="try">Bewegungen:</label>
       <input class="input" type="text" id="try"></input>
-    </div>
+    </div>    
+    <div class="input-wrapper">
+      <label class="label" for="given">Startwert:</label>
+      <input class="input" type="text" id="given"></input>
+    </div> 
     <div class="input-wrapper">
       <label class="label" for="operands">Operations:</label>
       <input class="input" type="text" id="operands"></input>
     </div>
-    <div class="input-wrapper">
-      <label class="label" for="given">Given:</label>
-      <input class="input" type="text" id="given"></input>
-    </div> 
+
 
     <input type="button" id="calc" value='Calculate' onClick="init()"></input>
   </div>
