--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <input type="button" value='=>' onClick="addToInput('=>')"></input>
         <input type="button" value='<<' onClick="addToInput('<<')"></input>
         <input type="button" value='^' onClick="addToInput('^')"></input>
+        <input type="button" value='+/-' onClick="addToInput('+/-')"></input>
         <input type="button" value=';' onClick="addToInput(';')"></input>
       </div>
       <div class="numbers">
